Upgrade to javassist 3.1.16-GA

--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -113,7 +113,19 @@
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
-            <version>3.0.5</version>
+            <version>${ognl.version}</version>
+            <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javassist</groupId>
+                    <artifactId>javassist</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${javassist.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
