--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,13 @@
         <cxf.build-utils.version>2.6.0</cxf.build-utils.version>
         <ehcache.version>2.8.1</ehcache.version>
         <httpclient.version>4.3.2</httpclient.version>
+        <javassist.version>3.16.1-GA</javassist.version>
         <jericho.version>3.2</jericho.version>
         <jetty.version>8.1.12.v20130726</jetty.version>
         <!--<jetty.version>7.6.8.v20121106</jetty.version>-->
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.17</log4j.version>
+        <ognl.version>3.0.8</ognl.version>
         <servlet.version>2.5</servlet.version>
         <slf4j.version>1.7.7</slf4j.version>
         <spring.version>3.1.4.RELEASE</spring.version>
