--- a/pom.xml
+++ b/pom.xml
@@ -28,23 +28,26 @@
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
-        <version>13</version>
+        <version>14</version>
     </parent>
 
     <properties>
-        <commons.lang.version>3.0.1</commons.lang.version>
-        <commons.logging.version>1.1.1</commons.logging.version>
+        <commons.lang.version>3.3.2</commons.lang.version>
+        <commons.logging.version>1.1.3</commons.logging.version>
         <cxf.version>2.7.11</cxf.version>
         <cxf.build-utils.version>2.6.0</cxf.build-utils.version>
         <ehcache.version>2.5.1</ehcache.version>
-        <httpclient.version>4.3.2</httpclient.version>
+        <httpclient.version>4.3.3</httpclient.version>
+        <hsqldb.version>1.8.0.10</hsqldb.version>
         <javassist.version>3.16.1-GA</javassist.version>
-        <jericho.version>3.2</jericho.version>
+        <javax.validation.version>1.1.0.Final</javax.validation.version>
+        <jericho.version>3.3</jericho.version>
         <jetty.version>8.1.12.v20130726</jetty.version>
         <!--<jetty.version>7.6.8.v20121106</jetty.version>-->
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.17</log4j.version>
         <ognl.version>3.0.8</ognl.version>
+        <openjpa.version>2.3.0</openjpa.version>
         <servlet.version>2.5</servlet.version>
         <slf4j.version>1.7.7</slf4j.version>
         <spring.version>3.1.4.RELEASE</spring.version>
