--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -33,17 +33,17 @@
             <dependency>
         	    <groupId>org.springframework</groupId>
         	    <artifactId>spring-jdbc</artifactId>
-        	    <version>3.1.4.RELEASE</version>
+        	    <version>${spring.version}</version>
             </dependency>
             <dependency>
         	    <groupId>org.springframework</groupId>
         	    <artifactId>spring-tx</artifactId>
-        	    <version>3.1.4.RELEASE</version>
+        	    <version>${spring.version}</version>
             </dependency>
             <dependency>
         	    <groupId>org.springframework</groupId>
         	    <artifactId>spring-aop</artifactId>
-        	    <version>3.1.4.RELEASE</version>
+        	    <version>${spring.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.springframework.webflow</groupId>
             <artifactId>spring-webflow</artifactId>
-            <version>2.3.1.RELEASE</version>
+            <version>2.3.4.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -129,7 +129,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.0.1</version>
+            <version>${commons.lang.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
