--- a/systests/spring/pom.xml
+++ b/systests/spring/pom.xml
@@ -78,7 +78,7 @@
         <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>1.8.0.7</version>
+            <version>${hsqldb.version}</version>
             <scope>test</scope>
         </dependency>                 
     </dependencies>
