--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,8 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes</developerConnection>
-        <url>http://svn.apache.org/repos/asf/cxf/fediz/branches/1.0.x-fixes</url>
+        <connection>scm:git:http://git-wip-us.apache.org/repos/asf/cxf-fediz.git</connection>
+        <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/cxf-fediz.git</developerConnection> 
     </scm>
 
     <issueManagement>
