--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -21,14 +21,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>apache-fediz</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
     <name>Apache Fediz Assembly</name>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>fediz</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
 
 
