--- a/systests/tomcat7/pom.xml
+++ b/systests/tomcat7/pom.xml
@@ -22,7 +22,7 @@
    <parent>
       <groupId>org.apache.cxf.fediz</groupId>
       <artifactId>systests</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.2-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>org.apache.cxf.fediz.systests</groupId>
