--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -22,7 +22,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz</artifactId>
-       <version>1.0.4</version>
+       <version>1.0.5-SNAPSHOT</version>
    </parent>
    <groupId>org.apache.cxf.fediz</groupId>
    <artifactId>plugin</artifactId>
