--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,10 @@
         <version>14</version>
     </parent>
 
+    <prerequisites>
+        <maven>3.0</maven>
+    </prerequisites>
+
     <properties>
         <commons.lang.version>3.3.2</commons.lang.version>
         <commons.logging.version>1.1.3</commons.logging.version>
@@ -52,7 +56,7 @@
         <slf4j.version>1.7.7</slf4j.version>
         <spring.version>3.2.6.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
-        <tomcat.version>7.0.42</tomcat.version>
+        <tomcat.version>7.0.54</tomcat.version>
         <wss4j.version>2.0.0</wss4j.version>
         <bval.version>0.5</bval.version>
 
