--- a/systests/jetty8/pom.xml
+++ b/systests/jetty8/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>systests-jetty8</artifactId>
+    <artifactId>fediz-systests-jetty8</artifactId>
     <name>Apache Fediz Systests Jetty 8</name>
     <packaging>jar</packaging>
     <properties>
