--- a/systests/simpleWebapp/pom.xml
+++ b/systests/simpleWebapp/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>systests-simpleWebapp</artifactId>
+    <artifactId>fediz-systests-simpleWebapp</artifactId>
     <name>Apache Fediz Systests SimpleWebapp</name>
     <packaging>war</packaging>
     <properties>
