--- a/systests/spring/pom.xml
+++ b/systests/spring/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>systests-spring</artifactId>
+    <artifactId>fediz-systests-spring</artifactId>
     <name>Apache Fediz Systests Spring Security</name>
     <packaging>jar</packaging>
     <properties>
