--- a/systests/springWebapp/pom.xml
+++ b/systests/springWebapp/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>systests-springWebapp</artifactId>
+    <artifactId>fediz-systests-springWebapp</artifactId>
     <name>Apache Fediz Systests SpringWebapp</name>
     <packaging>war</packaging>
 
