--- a/systests/tests/pom.xml
+++ b/systests/tests/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>systests-tests</artifactId>
+    <artifactId>fediz-systests-tests</artifactId>
     <name>Apache Fediz Systests Tests</name>
     <packaging>jar</packaging>
     <properties>
