--- a/systests/tomcat7/pom.xml
+++ b/systests/tomcat7/pom.xml
@@ -26,7 +26,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>systests-tomcat7</artifactId>
+    <artifactId>fediz-systests-tomcat7</artifactId>
     <name>Apache Fediz Systests Tomcat 7</name>
     <packaging>jar</packaging>
     <properties>
