--- a/systests/tomcat7/pom.xml
+++ b/systests/tomcat7/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
-        <artifactId>systests</artifactId>
+        <artifactId>fediz-systests</artifactId>
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
