--- a/systests/jetty8/pom.xml
+++ b/systests/jetty8/pom.xml
@@ -76,7 +76,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz.systests</groupId>
-            <artifactId>systests-tests</artifactId>
+            <artifactId>fediz-systests-tests</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
@@ -165,7 +165,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.cxf.fediz.systests</groupId>
-                                    <artifactId>systests-simpleWebapp</artifactId>
+                                    <artifactId>fediz-systests-simpleWebapp</artifactId>
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
@@ -173,7 +173,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.cxf.fediz.systests</groupId>
-                                    <artifactId>systests-springPreauthWebapp</artifactId>
+                                    <artifactId>fediz-systests-springPreauthWebapp</artifactId>
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
