--- a/systests/tomcat7/pom.xml
+++ b/systests/tomcat7/pom.xml
@@ -72,7 +72,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz.systests</groupId>
-            <artifactId>systests-tests</artifactId>
+            <artifactId>fediz-systests-tests</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
@@ -163,7 +163,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.cxf.fediz.systests</groupId>
-                                    <artifactId>systests-simpleWebapp</artifactId>
+                                    <artifactId>fediz-systests-simpleWebapp</artifactId>
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
