Adding unit tests for SAML SSO

--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -67,6 +67,12 @@
             <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>${easymock.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
