--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <commons.logging.version>1.1.3</commons.logging.version>
         <cxf.version>3.0.1</cxf.version>
         <cxf.build-utils.version>2.6.0</cxf.build-utils.version>
+        <easymock.version>3.1</easymock.version>
         <ehcache.version>2.8.3</ehcache.version>
         <httpclient.version>4.3.3</httpclient.version>
         <hsqldb.version>1.8.0.10</hsqldb.version>
