--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -320,5 +320,12 @@
 				</dependency>
 			</dependencies>
 		</profile>
+                <profile>
+                    <id>kerberos</id>
+                    <properties>
+                        <adapter.resource>kerberos</adapter.resource>
+                    </properties>
+                </profile>
+
 	</profiles>
 </project>
