--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -35,9 +35,11 @@
       <module>springPreauthWebapp</module>
       <module>springWebapp</module>
       <module>spring2Webapp</module>
+      <module>cxfWebapp</module>
       <module>jetty8</module>
       <module>tomcat7</module>
       <module>spring</module>
+      <module>cxf</module>
    </modules>
 
 </project>
