--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <ehcache.version>2.8.3</ehcache.version>
         <httpclient.version>4.3.3</httpclient.version>
         <hsqldb.version>1.8.0.10</hsqldb.version>
+        <htmlunit.version>2.15</htmlunit.version>
         <javassist.version>3.16.1-GA</javassist.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <jericho.version>3.3</jericho.version>
@@ -59,6 +60,7 @@
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <tomcat.version>7.0.54</tomcat.version>
         <wss4j.version>2.0.2-SNAPSHOT</wss4j.version>
+        <xalan.version>2.7.2</xalan.version>
         <bval.version>0.5</bval.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
