Enforcing client authentication for the OnBehalfOf endpoint
Conflicts:
	services/sts/pom.xml

--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -198,6 +198,8 @@
 									<keystore>${project.build.directory}/test-classes/jetty-ssl.keystore</keystore>
 									<password>jettypw</password>
 									<keyPassword>jettypw</keyPassword>
+                                                                        <truststore>${project.build.directory}/test-classes/jetty-ssl.keystore</truststore>
+                                                                        <trustPassword>jettypw</trustPassword>
 									<wantClientAuth>true</wantClientAuth>
 								</connector>
 							</connectors>
