--- a/services/sts/src/test/resources/stsclient.properties
+++ b/services/sts/src/test/resources/stsclient.properties
@@ -1,6 +1,6 @@
 sts-url=
 truststore=jetty-ssl.keystore
 truststore-pw=jettypw
-keystore=${sts-client-keystore}
-keystore-pw=${sts-client-keystore-pw}
-keystore-key-pw=${sts-client-keystore-key-pw}
+keystore=jetty-ssl.keystore
+keystore-pw=jettypw
+keystore-key-pw=jettypw
