Add JNDI Datasource definition but disabled

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -89,4 +89,14 @@ under the License.
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <!-- Uncomment this when using JNDI DataSource -->
+    <!-- The property jpa.platform must be updated in persistence.properties even you use JNDI Datasource -->
+    <!-- 
+    <resource-ref>
+        <res-ref-name>jdbc/fedizDataSource</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+    -->
+
 </web-app>
