--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <properties>
         <commons.lang.version>3.3.2</commons.lang.version>
         <commons.logging.version>1.1.3</commons.logging.version>
-        <cxf.version>3.0.2-SNAPSHOT</cxf.version>
+        <cxf.version>3.0.2</cxf.version>
         <cxf.build-utils.version>2.6.0</cxf.build-utils.version>
         <easymock.version>3.1</easymock.version>
         <ehcache.version>2.8.3</ehcache.version>
