--- a/systests/spring2Webapp/pom.xml
+++ b/systests/spring2Webapp/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>org.apache.cxf.fediz</groupId>
 		<artifactId>systests</artifactId>
-		<version>1.1.2</version>
+		<version>1.1.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
