--- a/services/idp/src/main/resources/log4j.properties
+++ b/services/idp/src/main/resources/log4j.properties
@@ -1,8 +1,10 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=FATAL, CONSOLE
 log4j.rootCategory=INFO, CONSOLE, LOGFILE
-log4j.logger.org.springframework.webflow=DEBUG,LOGFILE
-log4j.logger.org.springframework.security=DEBUG,LOGFILE
+log4j.logger.org.springframework.webflow=DEBUG, LOGFILE
+log4j.additivity.org.springframework.webflow = false
+log4j.logger.org.springframework.security=DEBUG, LOGFILE
+log4j.additivity.org.springframework.security = false
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
