--- a/systests/tomcat7/pom.xml
+++ b/systests/tomcat7/pom.xml
@@ -215,8 +215,8 @@
                             <includes>
                                 <include>**/integrationtests/**</include>
                             </includes>
-                            <argLine>-Xms512m -Xmx1024m
-                                -XX:MaxPermSize=256m</argLine>
+                            <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m </argLine>
+                            <!--argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</argLine-->
                         </configuration>
                     </execution>
                     <execution>
