Adding a mock SAML SSO IdP to the systests to be used in the federation scenario with the Fediz IdP

--- a/systests/federation/pom.xml
+++ b/systests/federation/pom.xml
@@ -31,6 +31,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>samlIdpWebapp</module>
         <module>samlsso</module>
         <module>wsfed</module>
     </modules>
