--- a/systests/webapps/simpleWebapp/pom.xml
+++ b/systests/webapps/simpleWebapp/pom.xml
@@ -20,14 +20,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.cxf.fediz</groupId>
-        <artifactId>fediz-systests</artifactId>
+        <groupId>org.apache.cxf.fediz.systests</groupId>
+        <artifactId>fediz-systests-webapps</artifactId>
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>fediz-systests-cxfWebapp</artifactId>
-    <name>Apache Fediz Systests CXF Webapp</name>
+    <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
+    <artifactId>fediz-systests-webapps-simple</artifactId>
+    <name>Apache Fediz Systests SimpleWebapp</name>
     <packaging>war</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,32 +39,23 @@
             <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Required to cast Principal to FederationPrincipal -->
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
-            <artifactId>fediz-cxf</artifactId>
+            <artifactId>fediz-core</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang.version}</version>
-        </dependency>      
+        </dependency>  
         <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>${cxf.version}</version>
-       </dependency>
-       <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-
+        </dependency>    
     </dependencies>
     <build>
         <!-- Name of the generated WAR file -->
