--- a/systests/webapps/springWebapp/pom.xml
+++ b/systests/webapps/springWebapp/pom.xml
@@ -20,13 +20,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.cxf.fediz</groupId>
-        <artifactId>fediz-systests</artifactId>
+        <groupId>org.apache.cxf.fediz.systests</groupId>
+        <artifactId>fediz-systests-webapps</artifactId>
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>org.apache.cxf.fediz.systests</groupId>
-    <artifactId>fediz-systests-springWebapp</artifactId>
+    <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
+    <artifactId>fediz-systests-webapps-spring</artifactId>
     <name>Apache Fediz Systests SpringWebapp</name>
     <packaging>war</packaging>
 
