Adding a new systests module for kerberos testing using an Apache DS KDC

--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -37,6 +37,7 @@
       <module>spring</module>
       <module>cxf</module>
       <module>federation</module>
+      <module>kerberos</module>
    </modules>
 
 </project>
