--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     </prerequisites>
 
     <properties>
+        <apacheds.version>2.0.0-M19</apacheds.version>
         <commons.lang.version>3.3.2</commons.lang.version>
         <commons.logging.version>1.1.3</commons.logging.version>
         <cxf.version>3.0.5-SNAPSHOT</cxf.version>
