Adding a new system test to show how to use client authentication with the IdP

--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -38,6 +38,7 @@
       <module>cxf</module>
       <module>federation</module>
       <module>kerberos</module>
+      <module>clientcert</module>
    </modules>
 
 </project>
