[FEDIZ-112] Fixing Tomcat race condition with saved request * Improving Tomcat plugin by using core handler (code cleanup) * Renaming Tomcat plugin to tomcat7 plugin

--- a/apache-fediz/pom.xml
+++ b/apache-fediz/pom.xml
@@ -52,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
-            <artifactId>fediz-tomcat</artifactId>
+            <artifactId>fediz-tomcat7</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
