--- a/plugins/tomcat7/pom.xml
+++ b/plugins/tomcat7/pom.xml
@@ -26,7 +26,7 @@
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>fediz-tomcat</artifactId>
+    <artifactId>fediz-tomcat7</artifactId>
     <name>Apache Fediz Plugin Tomcat</name>
     <packaging>jar</packaging>
     <properties>
