--- a/systests/federation/samlsso/pom.xml
+++ b/systests/federation/samlsso/pom.xml
@@ -66,7 +66,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
-            <artifactId>fediz-tomcat</artifactId>
+            <artifactId>fediz-tomcat7</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
