--- a/systests/webapps/springPreauthWebapp/src/main/resources/log4j.properties
+++ b/systests/webapps/springPreauthWebapp/src/main/resources/log4j.properties
@@ -1,13 +1,13 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
-#log4j.rootLogger=INFO, CONSOLE
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=INFO, CONSOLE
+#log4j.rootLogger=DEBUG, CONSOLE
 #log4j.logger.org.springframework=INFO, CONSOLE
 #log4j.logger.org.springframework.security=DEBUG, CONSOLE,LOGFILE
 #log4j.logger.org.apache.cxf.fediz=DEBUG, CONSOLE,LOGFILE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=DEBUG
+log4j.appender.CONSOLE.Threshold=WARNING
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
 
